Added one field in user table and API for active user and send mail when create new user and update status of user
